--- a/articulo4.html
+++ b/articulo4.html
@@ -39,39 +39,20 @@
 
 
 <main class="article-content">
-    <h1>Alineación Estratégica Entre RRHH y La Empresa</h1>
+    <h1>De Administrador a Socio Estratégico</h1>
     <p class="intro">
-      <i>¿Cómo Alinear las Funciones de Recursos Humanos con las Competencias Claves para Lograr los Objetivos Empresariales?</i>
+      <i>¿Te imaginas a Recursos Humanos como  Socio Estratégico del negocio? </i>
     </p>
-    <p> Este es el verdadero origen de solo ser un departamento a convertirse en socio estratégico,  y para ellos es fundamental analizar cada una de sus funciones en relación con las competencias que la empresa necesita para cumplir sus objetivos. </p>
-    <p>Para lograrlo, es fundamental analizar cada una de sus funciones en relación con las competencias que la empresa necesita para cumplir sus objetivos.</p>
-    <p>A continuación, te presento un desglose detallado: </p>
+    <p>A veces, la gente ve al área de RR. HH. como “los que organizan la fiesta de fin de año” o “los que me mandan correos para que firme la política de uso de la cafetera”. ¡Es hora de cambiar esa percepción! Con unos KPI’s bien definidos, tu equipo de Recursos Humanos puede convertirse en un aliado estratégico de la empresa. </p>
+    <p><strong>¿Cómo lograrlo sin morir en el intento? ¡Sigue leyendo!</strong></p>
         <section>
-            <h2>1. Reclutamiento y Selección: Atrayendo el Talento Adecuado</h2>
-            <p><strong>Objetivo:</strong> Garantizar que la empresa cuente con las personas correctas en los puestos clave.</p>
-            <p><strong>Desafío común:</strong> Contrataciones basadas solo en experiencia técnica sin evaluar la alineación con la cultura y estrategia empresarial.</p>
-
-            <h3>Solución:</h3>
-            <ul>
-                <li>Definir las competencias críticas necesarias para el éxito en la organización.</li>
-                <li>Incorporar assessments basados en competencias, entrevistas estructuradas y pruebas psicométricas alineadas con la visión del negocio.</li>
-                <li>Aprovechar la analítica de datos en el proceso de selección para identificar patrones de éxito en las contrataciones previas.</li>
-            </ul>
-            <p><strong>Indicador clave:</strong> Tiempo promedio de contratación + retención de talento en el primer año.</p>
+            <h2>Alinéate con la estrategia del negocio</h2>
+            <p>Imagina que RR. HH. es el DJ de la fiesta corporativa: su trabajo es mantener el ritmo que la empresa necesita. Para ello, primero debes conocer cuál es la música que todos están bailando: la visión, misión y objetivos de la compañía. Establece KPI’s que conecten con esos objetivos, como la reducción de la rotación de personal o el aumento del compromiso de los empleados.</p>
         </section>
-
         <section>
-            <h2>2. Desarrollo y Capacitación: Cerrando Brechas de Competencias</h2>
-            <p><strong>Objetivo:</strong> Desarrollar las habilidades que la empresa necesita para cumplir sus metas.</p>
-            <p><strong>Desafío común:</strong> Programas de capacitación desconectados de los retos del negocio.</p>
-
-            <h3>Solución:</h3>
-            <ul>
-                <li>Mapeo de competencias clave: Definir qué conocimientos, habilidades y actitudes son esenciales para cada nivel organizacional.</li>
-                <li>Capacitación basada en datos: Identificar brechas de competencias mediante evaluaciones de desempeño y encuestas de necesidades de formación.</li>
-                <li>Aprendizaje práctico: Implementar proyectos en el trabajo, mentorías y rotación de roles para desarrollar habilidades en situaciones reales.</li>
-            </ul>
-            <p><strong>Indicador clave:</strong> Impacto de la capacitación en la productividad y el desempeño.</p>
+            <h2>Define KPI’s claros y medibles</h2>
+            <p>Lo primero que debes evitar es la famosa frase: <i>“Vamos a medir el clima organizacional… ¡eh, sí, con una encuesta!” </i> y listo, todos contentos. La clave es definir metas específicas, por ejemplo, “Incrementar la satisfacción de los empleados un 20% en el siguiente trimestre” o “Reducir el tiempo de reclutamiento de 45 a 30 días”. Cuanto más detallados sean estos objetivos, más fácil será llevar la cuenta del progreso.</p>
+           
         </section>
 
         <section>
