--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <p>Convierte RRHH en un socio estratégico alineando sus funciones con los objetivos empresariales para un impacto real y medible.</p>
     </a>
     </a><a href="articulo4.html" class="article-box">
-        <img src="img/objetivos.jpg" alt="Imagen del Artículo">
-        <h2>Alineación Estratégica entre RRHH y la Empresa</h2>
-        <p>Convierte RRHH en un socio estratégico alineando sus funciones con los objetivos empresariales para un impacto real y medible.</p>
+        <img src="img/socio2.png" alt="Imagen del Artículo">
+        <h2>De administrador a socio estratégico</h2>
+        <p>RRHH como socio estratégico: KPI’s clave y gestión alineada con los objetivos del negocio.</p>
     </a>
 
 </main>
